<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".login.SignInActivity"
    android:focusable="true"
    android:focusableInTouchMode="true">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile_image"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/soft_logo"
                app:civ_border_color="#FF000000"
                app:civ_border_width="2dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="15dp"
                android:hint="@string/user_name"
                android:padding="10dp"
                app:boxBackgroundColor="@color/colorLightBlack">

                <EditText
                    android:id="@+id/etUserNameId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:hint="@string/password"
                android:padding="10dp"
                app:boxBackgroundColor="@color/colorLightBlack">

                <EditText
                    android:id="@+id/etPasswordId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLoginId"
                android:layout_width="150sp"
                android:layout_height="wrap_content"
                android:padding="10sp"
                android:text="@string/login"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvCreateNewId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:paddingRight="40dp"
                android:text="@string/create_new"
                android:textColor="@color/colorWhite"
                android:textSize="12sp">

            </TextView>

        </LinearLayout>
    </ScrollView>


</LinearLayout>