<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".login.SignUpActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/soft_logo"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp" />


    <LinearLayout
        android:id="@+id/layout_main_signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:hint="@string/user_name"
            android:padding="10dp"
            app:boxBackgroundColor="@color/colorLightBlack">

            <EditText
                android:id="@+id/etUserNameID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:hint="@string/phone_number"
            android:padding="10dp"
            app:boxBackgroundColor="@color/colorLightBlack">

            <EditText
                android:id="@+id/etPhoneID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:singleLine="true"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSubmitId"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10sp"
            android:text="Submit"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_Otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/otp"
            android:padding="10dp"
            app:boxBackgroundColor="@color/colorLightBlack">

            <EditText
                android:id="@+id/etOtpID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:singleLine="true"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnVerifyID"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="10sp"
            android:text="@string/verify"
            android:textSize="18sp" />

    </LinearLayout>
</LinearLayout>